add trimmed data

--- a/app/ml/NLP-model.ipynb
+++ b/app/ml/NLP-model.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 1,
    "id": "306d6ead",
    "metadata": {},
    "outputs": [],
@@ -75,6 +75,16 @@
    ],
    "source": [
     "spotify.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "30a593b1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "spotify.to_csv('trimmed_spotify.csv', index=False)"
    ]
   },
   {
@@ -273,7 +283,8 @@
    ],
    "source": [
     "# Instantiate vectorizer object\n",
-    "tfidf_vect = TfidfVectorizer(tokenizer=tokenize)\n",
+    "tfidf_vect = TfidfVectorizer(tokenizer=tokenize, min_df=0.03, \n",
+    "                        max_df=0.3)\n",
     "\n",
     "# Create a vocabulary and get word counts per document\n",
     "# Similiar to fit_predict\n",
@@ -656,8 +667,7 @@
    ],
    "source": [
     "# Instantiate vectorizer object\n",
-    "tfidf_vect = TfidfVectorizer(stop_words='english',min_df=0.03, \n",
-    "                        max_df=0.3)\n",
+    "tfidf_vect = TfidfVectorizer(stop_words='english')\n",
     "\n",
     "# Create a vocabulary and get word counts per document\n",
     "# Similiar to fit_predict\n",
