add zip dataframe

--- a/app/notebook/NLP-model.ipynb
+++ b/app/notebook/NLP-model.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "a69f0e42",
+   "id": "049ba0ba",
    "metadata": {},
    "source": [
     "## Import Package"
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dc51cf6b",
+   "id": "7f76d6ed",
    "metadata": {},
    "source": [
     "## Clean Data"
@@ -109,13 +109,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 45,
    "id": "4e01a21e",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Save the clean data into csv\n",
-    "spotify.to_csv('../data/trimmed_spotify.csv', index=False)"
+    "spotify.to_csv('../data/trimmed_spotify.gz', index=False, compression='gzip')"
    ]
   },
   {
@@ -261,7 +261,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "014fcf8a",
+   "id": "dd9fa55c",
    "metadata": {},
    "source": [
     "## Model"
