--- a/app/notebook/NLP-model.ipynb
+++ b/app/notebook/NLP-model.ipynb
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 3,
    "id": "7b90291f",
    "metadata": {},
    "outputs": [],
@@ -58,11 +58,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 4,
    "id": "8e5d9f0b",
    "metadata": {},
    "outputs": [
     {
+     "output_type": "execute_result",
      "data": {
       "text/plain": [
        "Index(['track_id', 'track_name', 'track_artist', 'lyrics', 'track_popularity',\n",
@@ -74,9 +75,8 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 60,
      "metadata": {},
-     "output_type": "execute_result"
+     "execution_count": 4
     }
    ],
    "source": [
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "id": "ab1b3b02",
    "metadata": {},
    "outputs": [],
@@ -760,6 +760,76 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "track = 'Dumb Litty'\n",
+    "artist = 'KARD'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 29
+    }
+   ],
+   "source": [
+    "(spotify['track_name']==track).values.sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "3"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 34
+    }
+   ],
+   "source": [
+    "(spotify['track_artist']==artist).values.sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "no\n"
+     ]
+    }
+   ],
+   "source": [
+    "if (spotify['track_name']==track).values.sum()==1 and (spotify['track_artist']==artist).values.sum()==1:\n",
+    "    print('yes')\n",
+    "else:\n",
+    "    print('no')"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 47,
    "id": "a5558500",
    "metadata": {},
@@ -870,7 +940,7 @@
  "metadata": {
   "kernelspec": {
    "name": "python3",
-   "display_name": "Python 3.7.0 64-bit ('U4-S1-NLP': conda)"
+   "display_name": "Python 3.8.5 64-bit ('Spotify-Recommendation-U2JoDukR': pipenv)"
   },
   "language_info": {
    "codemirror_mode": {
@@ -882,10 +952,10 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.0"
+   "version": "3.8.5"
   },
   "interpreter": {
-   "hash": "d9d4c4d46cd2df6cd3e29f938c44eab26042d9bb144eda5c9f4cbd5e9634f1c8"
+   "hash": "7fec154cbcf52be80755f51877971d41d053a2a2ea4e0948df4bc502044eb0e5"
   }
  },
  "nbformat": 4,
